--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@fullcalendar/vue3": "^6.1.10",
     "axios": "^1.6.2",
+    "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "redaxios": "^0.5.1",
     "vue": "^3.3.8",
